# dotstrap

./: README.rst  action.yml  pyproject.toml
.github/workflows/: python-publish.yml
dotstrap/: dotstrap.py
