[tool.poetry]
name = "dotstrap"
version = "0.1.8"
description = "A simiple Python based command line tool that acts as a git wrapper for simplifying dotfile management via bare git repository."
authors = ["mark <mark@dixon.se>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
pexpect = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
dotstrap = "dotstrap.dotstrap:cli"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
